# rusty-pokemon

./: Cargo.toml  Readme.md  index.html
src/: main.rs  routes.rs
src/api/: mod.rs  pokeapi.rs  storage.rs
src/components/: mod.rs  pokemon_card.rs  spinner_component.rs
src/hooks/: mod.rs  pokemon.rs
src/model/: mod.rs  pokemon.rs  pokemon_response.rs
src/pages/: home.rs  mod.rs  page_not_found.rs  pokemon.rs
styles/: app.css  components_pokemon_card.css
