[package]
name = "webthing-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16.0"
gloo = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
wasm-bindgen-futures = "0.4"

